--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.datasource.url=jdbc:mysql://localhost:8889/fidelityApp
 spring.datasource.username=root
 spring.datasource.password=root
 
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=rootuser
-spring.data.mongodb.password=rootpass
-spring.data.mongodb.database=fidelityDB
-spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
-spring.port=3000
+#spring.data.mongodb.authentication-database=admin
+#spring.data.mongodb.username=rootuser
+#spring.data.mongodb.password=rootpass
+#spring.data.mongodb.database=fidelityDB
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.host=localhost
+#spring.port=3000
