--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.url=jdbc:mysql://localhost:8889/fidelityApp
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+logging.level.orh.hibernate.SQL = DEBUG
 #spring.data.mongodb.authentication-database=admin
 #spring.data.mongodb.username=rootuser
 #spring.data.mongodb.password=rootpass
